tdarr/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr-server-service    # < name of the service
  namespace: tdarr # < namespace where place the deployment and pods
spec:
  selector:
    app: tdarr # < reference to the deployment (connects with this deployment)
    type: LoadBalancer
  ports:
    - name: server
      protocol: TCP
      port: 8266
  loadBalancerIP: 172.21.3.13
